Styles for NotificationButton on TravelPage for small devices

--- a/src/styles/components/NotificationsPage/_addNotification.scss
+++ b/src/styles/components/NotificationsPage/_addNotification.scss
@@ -75,6 +75,10 @@
     width: 100%;
   }
 
+  .add-notification__button--big {
+    font-size: $m-size;
+  }
+
   .add-notification__inputs {
     flex-direction: column;
   }
