Add Link to travels in  NotificationPage

--- a/src/styles/components/NotificationsPage/_notificationItem.scss
+++ b/src/styles/components/NotificationsPage/_notificationItem.scss
@@ -29,6 +29,11 @@
 
 }
 
+.notification-item--link {
+    text-decoration: none;
+    color: inherit;
+}
+
 .notification-item__delete-button {
     position: absolute;
     right: 0;
