--- a/src/styles/components/MainPage/_bestDeals.scss
+++ b/src/styles/components/MainPage/_bestDeals.scss
@@ -1,10 +1,14 @@
 .best-deals__container {
-    border: 1px solid red;
+    text-align: center;
+    color: $light-black;
 }
 
+.best-deals__text--big {
+    font-size: $l-size;
+}
 
-@media (min-width: $desktop-breakpoint) {
-    .best-deals__container {
-        
+@media (max-width: $desktop-breakpoint) {
+    .best-deals__text--big {
+        font-size: 2.4rem;
     }
 }
