--- a/src/styles/components/MainPage/_bestDeals.scss
+++ b/src/styles/components/MainPage/_bestDeals.scss
@@ -1,6 +1,7 @@
 .best-deals__container {
     text-align: center;
     color: $light-black;
+    margin-top: $m-size;
 }
 
 .best-deals__text--big {
@@ -8,6 +9,10 @@
 }
 
 @media (max-width: $desktop-breakpoint) {
+    .best-deals__container {
+        margin-top: $s-size;
+    }
+
     .best-deals__text--big {
         font-size: 2.4rem;
     }
