--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -23,3 +23,4 @@
 @import './components/NotificationsPage/notificationItem';
 @import './components/NotificationsPage/addNotification';
 @import './components/MainPage/bestDeals';
+@import './components/MessageCenter/messageCenter';
