Add InfoPanel to main page

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,3 +24,4 @@
 @import './components/NotificationsPage/addNotification';
 @import './components/MainPage/bestDeals';
 @import './components/MessageCenter/messageCenter';
+@import './components/MainPage/infoPanel';
